--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,3 +6,13 @@ limit:
   minMoney: 0.01
   maxMoney: 999
   description: 最少要发${limit.minMoney}元， 最多${limit.maxMoney}元
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://springonaws-db.cqxzorg24smq.us-east-2.rds.amazonaws.com:3306/luckymoney?characterEncoding=utf-8
+    username: haiflin
+    password: KID3521451kid
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
